<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        app:logo="@mipmap/logo"
        app:title="@string/Title" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/text_bold_ww"
        android:layout_marginStart="@dimen/margin_10"
        android:text="@string/text_area" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        android:layout_margin="@dimen/margin_10"
        app:counterMaxLength="1024"
        app:counterOverflowTextAppearance="@style/TextLimitError">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_hint"
            android:maxLines="5"
            android:maxLength="1024" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/text_bold_ww"
        android:layout_marginStart="@dimen/margin_10"
        android:text="@string/network_info" />

    <include
        layout="@layout/toggle_switch_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/text_bold_ww"
        android:layout_marginStart="@dimen/margin_10"
        android:text="@string/emergency_call_text" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/emergency_call"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10"
        android:theme="@style/PrimaryFlatButton"
        android:text="@string/emergency_call" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/text_bold_ww"
        android:layout_marginStart="@dimen/margin_10"
        android:text="@string/device_lock" />

    <include
        layout="@layout/button_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</androidx.appcompat.widget.LinearLayoutCompat>