<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/lock_device"
        android:layout_width="@dimen/button_width"
        android:layout_margin="@dimen/margin_10"
        android:layout_height="wrap_content"
        android:theme="@style/PrimaryFlatButton"
        android:text="@string/lock_device" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/enable"
        android:layout_width="@dimen/button_width"
        android:layout_margin="@dimen/margin_10"
        android:layout_height="wrap_content"
        android:theme="@style/PrimaryFlatButton"
        android:text="@string/lock_enable" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/disable"
        android:layout_width="@dimen/button_width"
        android:layout_margin="@dimen/margin_10"
        android:layout_height="wrap_content"
        android:theme="@style/PrimaryFlatButton"
        android:text="@string/lock_disable" />

</androidx.appcompat.widget.LinearLayoutCompat>